--- a/src/CSSModule/Footer.module.css
+++ b/src/CSSModule/Footer.module.css
@@ -17,7 +17,7 @@
     font-size: 14px;
     font-family: Helvetica;
     list-style-type: none;
-    margin-bottom: 20px;
+    margin: 30px 0px;
 }
 
 a {
