--- a/src/CSSModule/Article.module.css
+++ b/src/CSSModule/Article.module.css
@@ -8,7 +8,7 @@
     margin-top: 5px;
 }
 
-.secondHomeP {
+.pByLineHome {
     color: #727272;
     font-size: 11px;
     padding: 8px 0;
@@ -38,7 +38,7 @@
         gap: 20px;
     }
 
-    .fullWidth{
+    .fullWidth {
         grid-column: span 3;
     }
 }
